--- a/home.html
+++ b/home.html
@@ -10,8 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<title>Semidán: Home</title>
-		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png
-">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
 		<script src="/transitions.js"></script>
     <link rel="stylesheet" href="css/master.css">
 		<link rel="stylesheet" href="css/home.css">
