--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
 
       <div class="contact-logo-container">
         <a href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top"><img class="contact-logo" id="mail" src="/imgs/email.png" alt="image"></a>
-        <a href="https://twitter.com/srobainae" target="_blank"><img class="contact-logo" id="github" src="/imgs/GitHub-Mark-Light-120px-plus.png" alt="image"></a>
-        <a href="https://github.com/Robaina" target="_blank"><img class="contact-logo" id="twitter" src="/imgs/Twitter_Social_Icon_Circle_Color.png" alt="image"></a>
+        <a href="https://github.com/Robaina" target="_blank"><img class="contact-logo" id="github" src="/imgs/GitHub-Mark-Light-120px-plus.png" alt="image"></a>
+        <a href="https://twitter.com/srobainae" target="_blank"><img class="contact-logo" id="twitter" src="/imgs/Twitter_Social_Icon_Circle_Color.png" alt="image"></a>
       </div>
 
     </div>
