minor changes to transitions

--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
 <input type="checkbox" id="menu">
 <label for="menu" id="burguer-menu">
-  <div class="nav-bracket burguer-bracket">[</div>
+  <div class="burguer-bracket">[</div>
 
   <div id="burguer-meat-container">
     <div class="nav-burguer-meat"></div>
@@ -8,7 +8,7 @@
     <div class="nav-burguer-meat"></div>
   </div>
 
-  <div class="nav-bracket burguer-bracket">]</div>
+  <div class="burguer-bracket">]</div>
 </label>
 
 </input>
