--- a/credits.html
+++ b/credits.html
@@ -1,8 +1,6 @@
 <a href="https://github.com/Robaina/Robaina.github.io" target="_blank">
-  <footer class="credits">
-    <div class="credits-content">
-      <div class="code-symbol"> < </div> <div class="code-symbol"> > </div>
-      <div>by Semidán Robaina Estévez, 2019</div>
-    </div>
-  </footer>
+  <div id="footer-content">
+    <div class="footer-code-symbol"> < </div> <div class="footer-code-symbol"> > </div>
+    <div>by Semidán Robaina Estévez, 2019</div>
+  </div>
 </a>
