--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 				$("#navbar").load("/navbar.html");
 			});
 			$(function() {
-				$("#credits").load("/credits.html");
+				$("#footer").load("/credits.html");
 			});
 			let logo = new Image();
 			logo.src = "/imgs/logo1.png";
@@ -31,47 +31,54 @@
 
 	<body>
 
-    <div class="navbar-container" id="navbar"></div>
+		<div id="page-container">
+			<div id="content-wrap">
 
-		<div class="info">
-			<div class="myname">
-        <div class="name-wrapper" id="name">
-					<div class="name-character">S</div>
-					<div class="name-character">e</div>
-					<div class="name-character">m</div>
-					<div class="name-character">i</div>
-					<div class="name-character">d</div>
-					<div class="name-character">á</div>
-					<div class="name-character">n</div>
+		    <div class="navbar-container" id="navbar"></div>
+
+				<div class="info">
+					<div class="myname">
+		        <div class="name-wrapper" id="name">
+							<div class="name-character">S</div>
+							<div class="name-character">e</div>
+							<div class="name-character">m</div>
+							<div class="name-character">i</div>
+							<div class="name-character">d</div>
+							<div class="name-character">á</div>
+							<div class="name-character">n</div>
+						</div>
+
+						<div class="name-wrapper" id="surname1">
+							<div class="name-character">R</div>
+							<div class="name-character">o</div>
+							<div class="name-character">b</div>
+							<div class="name-character">a</div>
+							<div class="name-character">i</div>
+							<div class="name-character">n</div>
+							<div class="name-character">a</div>
+		        </div>
+
+		        <div class="name-wrapper" id="surname2">
+							<div class="name-character">E</div>
+							<div class="name-character">s</div>
+							<div class="name-character">t</div>
+							<div class="name-character">é</div>
+							<div class="name-character">v</div>
+							<div class="name-character">e</div>
+							<div class="name-character">z</div>
+						</div>
+					</div>
+
+					<div class="myrol">
+						Researcher, developer, writer
+					</div>
 				</div>
 
-				<div class="name-wrapper" id="surname1">
-					<div class="name-character">R</div>
-					<div class="name-character">o</div>
-					<div class="name-character">b</div>
-					<div class="name-character">a</div>
-					<div class="name-character">i</div>
-					<div class="name-character">n</div>
-					<div class="name-character">a</div>
-        </div>
-
-        <div class="name-wrapper" id="surname2">
-					<div class="name-character">E</div>
-					<div class="name-character">s</div>
-					<div class="name-character">t</div>
-					<div class="name-character">é</div>
-					<div class="name-character">v</div>
-					<div class="name-character">e</div>
-					<div class="name-character">z</div>
-				</div>
 			</div>
 
-			<div class="myrol">
-				Researcher, developer, writer
-			</div>
+			<footer id="footer"></footer>
+			
 		</div>
-
-		<div id="credits"></div>
 
     <script src="art.js"></script>
 
