--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,10 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="/css/contact.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="/transitions.js"></script>
     <script>
       $(function() {
         $("#navbar").load("/navbar.html");
@@ -42,8 +44,6 @@
 
       <footer id="footer"></footer>
     </div>
-
-    <script src="/transitions.js"></script>
 
   </body>
 </html>
