--- a/home.html
+++ b/home.html
@@ -11,10 +11,11 @@
 
 		<title>Semidán: Home</title>
 		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
-		<script src="/transitions.js"></script>
     <link rel="stylesheet" href="css/master.css">
 		<link rel="stylesheet" href="css/home.css">
+		<link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
 
+    <script src="/transitions.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script>
 			$(function() {
@@ -77,7 +78,7 @@
 			</div>
 
 			<footer id="footer"></footer>
-			
+
 		</div>
 
     <script src="art.js"></script>
