Links go to new tap, added padding to navbar items

--- a/webapps.html
+++ b/webapps.html
@@ -45,50 +45,50 @@
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">The Pentagram of Venus</h1>
 						<img class="thumbnail" src="assets/pentagram.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/VenusPentagram/">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/VenusPentagram">Code</a></button>
+						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/VenusPentagram/" target="_blank">Deploy</a></button>
+						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/VenusPentagram" target="_blank">Code</a></button>
 					</div>
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">Sudoku solver</h1>
 						<img class="thumbnail" src="assets/sudoku.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/Sudoku/">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/Sudoku">Code</a></button>
+						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/Sudoku/" target="_blank">Deploy</a></button>
+						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/Sudoku" target="_blank">Code</a></button>
 					</div>
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">Metabolic flux orders</h1>
 						<img class="thumbnail" src="assets/fluxorders.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/fluxOrders/">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/fluxOrders">Code</a></button>
+						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/fluxOrders/" target="_blank">Deploy</a></button>
+						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/fluxOrders" target="_blank">Code</a></button>
 					</div>
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">Ayumu's game</h1>
 						<img class="thumbnail" src="assets/ayumu.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/AyumuGame/">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/AyumuGame">Code</a></button>
+						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/AyumuGame/" target="_blank">Deploy</a></button>
+						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/AyumuGame" target="_blank">Code</a></button>
 					</div>
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">Simon game</h1>
 						<img class="thumbnail" src="assets/simon.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/SimonGame/">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/SimonGame">Code</a></button>
+						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/SimonGame/" target="_blank">Deploy</a></button>
+						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/SimonGame" target="_blank">Code</a></button>
 					</div>
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">Colorful N-Mobius</h1>
 						<img class="thumbnail" src="assets/mobiusart.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/mobiusArt/">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/mobiusArt">Code</a></button>
+						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/mobiusArt/" target="_blank">Deploy</a></button>
+						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/mobiusArt" target="_blank">Code</a></button>
 					</div>
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">Oblate Spheroidal Coordinates</h1>
 						<img class="thumbnail" src="assets/oblatespheroidal.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/OblateSpheroidal/">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/OblateSpheroidal">Code</a></button>
+						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/OblateSpheroidal/" target="_blank">Deploy</a></button>
+						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/OblateSpheroidal" target="_blank">Code</a></button>
 					</div>
 					<div class="grid_item" tabindex="0">
 						<h1 class="grid_item_title">Function plotter</h1>
 						<img class="thumbnail" src="assets/functionplotter.png" alt="Responsive image">
-						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/functionPlotter/">Deploy</a></button>
-						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/functionPlotter">Code</a></button>
+						<button class="button deployButton" type="button"><a class="grid_link" href="https://robaina.github.io/functionPlotter/" target="_blank">Deploy</a></button>
+						<button class="button codeButton" type="button"><a class="grid_link" href="https://github.com/Robaina/functionPlotter" target="_blank">Code</a></button>
 					</div>
 
 				</div>
