--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/about.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="/transitions.js"></script>
@@ -21,6 +21,15 @@
       let logo = new Image();
       logo.src = "/imgs/logo1.png";
     </script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131412021-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-131412021-1');
+  </script>
+  
   </head>
   <body>
 
