--- a/assets/transition_logo.html
+++ b/assets/transition_logo.html
@@ -6,8 +6,13 @@
 
     <style media="screen">
 
-      body {
+      html, body {
         background-color: rgba(0,0,0,1);
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+        overflow: hidden;
       }
 
       .logo-container {
@@ -16,33 +21,63 @@
         --logoHeight:  calc(var(--scaleFactor) * 20vw);
 
         margin: auto;
-        padding-top: 32vh;
-        width: var(--logoWidth);
-        height: var(--logoHeight);
-        background-color: rgba(0,0,0,1);
+        width: 100%;
+        height: 100%;
       }
 
       svg {
         width: 100%;
-        height: auto;
+        height: 100%;
+        background-color: rgba(51,51,51,1);
       }
 
-      #logo-bar-2{
-        /* fill: "red"; */
-        animation: bar-animation 5s infinite;
+      .my-logo {
+        /* background-color: rgb(133, 133, 133); */
+        /* width: 50vw;
+        height: 50vw;
+        position: absolute;
+        top: 20vh;
+        left: 25vw; */
       }
+      .logo-bar {
+        background-image: linear-gradient(to right, rgb(255,255,0), rgb(0, 163, 255));
+        width: 30vw;
+        height: 8vw;
+        margin-right: 0vw;
+        margin-bottom: 2vh;
+        border: rgb(54, 54, 54) solid 2px;
+        border-radius: 4vw;
+        transform-origin: 50% 50%;
+        transform: rotate(-25deg);
+        position: absolute;
+      }
+      #logo-bar-1 {
+        top: 30vh;
+        left: 30vw;
+
+      }
+      #logo-bar-2 {
+        top: 40vh;
+        left: 36vw;
+        width: 15vw;
+      }
+      #logo-bar-3 {
+        top: 50vh;
+        left: 27vw
+      }
+
 
       @keyframes bar-animation {
-       from {left: 0px;}
-       to {left: 200px;}
+       from {x: 50%;}
+       to {x: 20%;}
       }
 
     </style>
   </head>
   <body>
 
-    <div class="logo-container">
-      <svg xmlns="http://www.w3.org/2000/svg" id="mylogo" viewBox="0 0 100 100" width="500" height="500">
+    <!-- <div class="logo-container">
+      <svg xmlns="http://www.w3.org/2000/svg" id="mylogo" width="100%" height="100%">
         <defs>
           <linearGradient id="grad2" x1="0%" y1="0%" x2="100%" y2="0%">
             <stop offset="0%" style="stop-color:rgb(255,255,0);stop-opacity:1" />
@@ -50,19 +85,25 @@
           </linearGradient>
         </defs>
 
-       <rect x="18" y="31" width="65" height="18" rx="10" ry="10"
+       <rect x="118" y="431" width="65" height="18" rx="10" ry="10"
              fill="url(#grad2)" stroke="rgb(54, 54, 54)" stroke-width="1"
              transform = "rotate(-25,15,15)" id="logo-bar-1"/>
 
-       <rect x="16" y="53" width="33" height="18" rx="10" ry="10"
+       <rect x="116" y="453" width="33" height="18" rx="10" ry="10"
              fill="url(#grad2)" stroke="rgb(54, 54, 54)" stroke-width="1"
              transform = "rotate(-25,15,15)" id="logo-bar-2"/>
 
-       <rect x="-18" y="75" width="65" height="18" rx="10" ry="10"
+       <rect x="82" y="475" width="65" height="18" rx="10" ry="10"
              fill="url(#grad2)" stroke="rgb(54, 54, 54)" stroke-width="1"
              transform = "rotate(-25,15,15)" id="logo-bar-3"/>
 
       </svg>
+    </div> -->
+
+    <div class="my-logo">
+      <div class="logo-bar" id="logo-bar-1"></div>
+      <div class="logo-bar" id="logo-bar-2"></div>
+      <div class="logo-bar" id="logo-bar-3"></div>
     </div>
 
   </body>
