--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
     <link rel="stylesheet" href="css/master.css">
 		<link rel="stylesheet" href="css/home.css">
-		<link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
+		<!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet"> -->
 
     <script src="/transitions.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -27,6 +27,14 @@
 			let logo = new Image();
 			logo.src = "/imgs/logo1.png";
 		</script>
+		
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131412021-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'UA-131412021-1');
+	</script>
 
 	</head>
 
