Added light mode / dark mode option

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-131412021-1');
   </script>
-  
+
   </head>
 
   <body>
@@ -43,9 +43,9 @@
           <p>Got any questions?</p>
 
           <div class="contact-logo-container">
-            <a href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top"><img class="contact-logo" id="mail" src="/imgs/email.png" alt="image"></a>
-            <a href="https://github.com/Robaina" target="_blank"><img class="contact-logo" id="github" src="/imgs/GitHub-Mark-Light-120px-plus.png" alt="image"></a>
-            <a href="https://twitter.com/srobainae" target="_blank"><img class="contact-logo" id="twitter" src="/imgs/Twitter_Social_Icon_Circle_Color.png" alt="image"></a>
+            <a href="mailto:hello@semidanrobaina.com?Subject=Hello" target="_top"><img class="contact-logo" id="mail-logo" src="/imgs/email.png" alt="image"></a>
+            <a href="https://github.com/Robaina" target="_blank"><img class="contact-logo" id="github-logo" src="#" alt="image"></a>
+            <a href="https://twitter.com/srobainae" target="_blank"><img class="contact-logo" id="twitter-logo" src="/imgs/Twitter_Social_Icon_Circle_Color.png" alt="image"></a>
           </div>
 
         </div>
@@ -54,5 +54,6 @@
       <footer id="footer"></footer>
     </div>
 
+    <script src="colormode.js"></script>
   </body>
 </html>
