--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 			let logo = new Image();
 			logo.src = "/imgs/logo1.png";
 		</script>
-		
+
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131412021-1"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
@@ -89,7 +89,8 @@
 
 		</div>
 
-    <script src="art.js"></script>
+    <script src="artwork.js"></script>
+		<script src="colormode.js"></script>
 
   </body>
 </html>
