--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="https://semidanrobaina.com/imgs/logo1.png">
     <link rel="stylesheet" href="css/index.css">
 
+		<!-- Preload images -->
+		<link rel="preload" as="image" href="/imgs/github_icon_dark.png"/>
+		<link rel="preload" as="image" href="/imgs/github_icon_light.png"/>
+		<script src="colormode.js"></script>
+
 		<script>
 
 			let logo = new Image();
