--- a/navbar.html
+++ b/navbar.html
@@ -11,7 +11,6 @@
   <div class="burguer-bracket">]</div>
 </label>
 
-</input>
 
 <div class="navbar">
 
@@ -30,3 +29,12 @@
 </div>
 
 <div id="navbar-line-separator"></div>
+
+<div id="settings-container">
+  <input type="checkbox" id="settings">
+  <label for="settings" id="settings-label">
+    <img src="/imgs/settings.png" alt="settings symbol image" id="settings-icon">
+  </label>
+  <div class="settings-item" id="light-mode" onclick="selectLightMode()">Light mode</div>
+  <div class="settings-item" id="dark-mode" onclick="selectDarkMode()">Dark mode</div>
+</div>
