--- a/research.html
+++ b/research.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/master.css">
     <link rel="stylesheet" href="/css/research.css">
     <script src="/transitions.js"></script>
+    <script src="colormode.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
