--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="/transitions.js"></script>
+    <script src="colormode.js"></script>
     <script>
       $(function() {
         $("#navbar").load("/navbar.html");
@@ -29,7 +30,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-131412021-1');
   </script>
-  
+
   </head>
   <body>
 
