--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="/transitions.js"></script>
+    <script src="colormode.js"></script>
     <script>
       $(function() {
         $("#navbar").load("/navbar.html");
