--- a/webapps.html
+++ b/webapps.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" href="/css/master.css">
 	  <link rel="stylesheet" href="/css/webapps.css">
 		<script src="/transitions.js"></script>
+		<script src="colormode.js"></script>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script>
